# oto-pi

./: CMakeLists.txt  README.md
.github/workflows/: build-test-analyse.yml  cmake-single-platform.yml  codeql.yml
src/: CMakeLists.txt  create_zone.cpp  oto_pi.cpp  read_sensors.cpp  run_motor.cpp
src/hardware/: CMakeLists.txt  CommonDefs.h  I2cAccessor.cpp  I2cAccessor.h  MagnetSensor.cpp  MagnetSensor.h  MotorControl.cpp  MotorControl.h  PressureSensor.cpp  PressureSensor.h  SensorService.h
src/hardware/include/: CommonDefs.h  I2cAccessor.h  MagnetSensor.h  MotorControl.h  NozzleControl.h  PressureSensor.h
src/hardware/lib/: I2cAccessor.cpp  MagnetSensor.cpp  MotorControl.cpp  NozzleControl.cpp  PressureSensor.cpp
src/irrigation/: CMakeLists.txt
src/irrigation/include/: PolygonApplicator.h  Sprinkler.h  Zone.h
src/irrigation/lib/: PolygonApplicator.cpp  Sprinkler.cpp  Zone.cpp
src/irrigation/test/: irrigation_test.cpp
src/utils/: CMakeLists.txt  Timer.h  Utils.h  Worker.cpp  Worker.h  timer.cpp
src/utils/include/: ConfigManager.h  CursesWrapper.h  Logger.h  MathUtils.h  MqttWrapper.h  PolarCoordinates.h  Timer.h
src/utils/lib/: ConfigManager.cpp  Logger.cpp  MathUtils.cpp  MqttWrapper.cpp  PolarCoordinates.cpp  Timer.cpp
src/utils/test/: utils_test.cpp
